# smartfarm-haesung-2025

./: pyproject.toml
collection/: boot.py  display.py  main.py  record.py
examples/: ex01_sample_code.py  ex02_led.py  ex03_led_blink.py  ex04_neopixel.py  ex05_buzzer.py  ex05_neopixel_blink.py  ex06_light.py  ex07_light_led.py  ex08_light_neopixel.py  ex09_light_buzzer.py  ex10_humidity.py  ex10_light_blink.py  ex11_humidity.py  ex11_temperature.py  ex12_gas.py  ex12_temperature.py  ex13_gas.py  ex14_temperature_buzzer.py  ex15_gas_neopixel.py  ex16_oled_point.py  ex17_oled_line.py  ex18_oled_text.py  ex19_oled_text_move.py  ex20_oled_light.py  ex21_titanic_analyze.ipynb
facilities/: boot.py  main.py
lib/: aht21.py  bh1750.py  ds3231.py  ens160.py  sdcard.py  soft_rtc.py  ssd1306.py  wlan.py
